--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -104,7 +104,7 @@ a:hover,
 a:active,
 a:focus {
 	text-decoration: none;
-	color: #009ce7;
+	color: #96ab5c;
 	outline: none;
 }
 .form-control {
@@ -116,12 +116,12 @@ a:focus {
 	min-height: 40px;
 }
 .form-control:focus {
-	border-color: #009efb;
+	border-color: #96ab5c;
 	box-shadow: none;
 	outline: 0 none;
 }
 a {
-	color: #009ce7;
+	color: #96ab5c;
 }
 input,
 button,
@@ -201,7 +201,7 @@ table.table td h2 a {
 	color: #757575;
 }
 table.table td h2 a:hover {
-	color: #009efb;
+	color: #96ab5c;
 }
 table.table td h2 span {
 	color: #9e9e9e;
@@ -342,8 +342,8 @@ table.table td h2 span {
 	min-width: 80px;
 }
 .badge-info-border {
-	border: 1px solid #009efb;
-	color: #009efb;
+	border: 1px solid #96ab5c;
+	color: #96ab5c;
 	background-color: #fff;
 	display: inline-block;
 	min-width: 80px;
@@ -386,7 +386,7 @@ table.table td h2 span {
 }
 .bg-primary,
 .badge-primary {
-	background-color: #009efb !important;
+	background-color: #96ab5c !important;
 }
 .bg-success,
 .badge-success {
@@ -394,7 +394,7 @@ table.table td h2 span {
 }
 .bg-info,
 .badge-info {
-	background-color: #009efb !important;
+	background-color: #96ab5c !important;
 }
 .bg-warning,
 .badge-warning {
@@ -409,7 +409,7 @@ table.table td h2 span {
 }
 .text-primary,
 .dropdown-menu > li > a.text-primary {
-	color: #009efb !important;
+	color: #96ab5c !important;
 }
 .text-success,
 .dropdown-menu > li > a.text-success {
@@ -421,7 +421,7 @@ table.table td h2 span {
 }
 .text-info,
 .dropdown-menu > li > a.text-info {
-	color: #009efb;
+	color: #96ab5c;
 }
 .text-warning,
 .dropdown-menu > li > a.text-warning {
@@ -440,8 +440,8 @@ table.table td h2 span {
 .btn-primary.active,
 .btn-primary:active,
 .open > .dropdown-toggle.btn-primary {
-	background-color: #009efb;
-	border: 1px solid #009efb;
+	background-color: #96ab5c;
+	border: 1px solid #96ab5c;
 	color: #fff;
 }
 .btn-primary.active.focus,
@@ -453,30 +453,30 @@ table.table td h2 span {
 .open > .dropdown-toggle.btn-primary.focus,
 .open > .dropdown-toggle.btn-primary:focus,
 .open > .dropdown-toggle.btn-primary:hover {
-	background-color: #009efb;
-	border: 1px solid #009efb;
+	background-color: #96ab5c;
+	border: 1px solid #96ab5c;
 }
 .btn-primary.active:not(:disabled):not(.disabled),
 .btn-primary:active:not(:disabled):not(.disabled),
 .show > .btn-primary.dropdown-toggle {
-	background-color: #009efb;
-	border-color: #009efb;
+	background-color: #96ab5c;
+	border-color: #96ab5c;
 	color: #fff;
 }
 .btn-outline-primary {
-	border-color: #009efb;
-	color: #009efb;
+	border-color: #96ab5c;
+	color: #96ab5c;
 }
 .btn-outline-primary:hover {
-	background-color: #009efb;
-	border-color: #009efb;
+	background-color: #96ab5c;
+	border-color: #96ab5c;
 	color: #fff;
 }
 .btn-outline-primary.active:not(:disabled):not(.disabled),
 .btn-outline-primary:active:not(:disabled):not(.disabled),
 .show > .btn-outline-primary.dropdown-toggle {
-	background-color: #009efb;
-	border-color: #009efb;
+	background-color: #96ab5c;
+	border-color: #96ab5c;
 	color: #fff;
 }
 .btn-success {
@@ -504,16 +504,16 @@ table.table td h2 span {
 	border: 1px solid #4ab657
 }
 .btn-info {
-	background-color: #009efb;
-	border: 1px solid #009efb
+	background-color: #96ab5c;
+	border: 1px solid #96ab5c
 }
 .btn-info:hover,
 .btn-info:focus,
 .btn-info.active,
 .btn-info:active,
 .open > .dropdown-toggle.btn-info {
-	background-color: #028ee1;
-	border: 1px solid #028ee1
+	background-color: #96ab5c;
+	border: 1px solid #96ab5c
 }
 .btn-info.active.focus,
 .btn-info.active:focus,
@@ -524,8 +524,8 @@ table.table td h2 span {
 .open > .dropdown-toggle.btn-info.focus,
 .open > .dropdown-toggle.btn-info:focus,
 .open > .dropdown-toggle.btn-info:hover {
-	background-color: #028ee1;
-	border: 1px solid #028ee1
+	background-color: #96ab5c;
+	border: 1px solid #96ab5c
 }
 .btn-warning {
 	background: #ffbc34;
@@ -566,17 +566,17 @@ table.table td h2 span {
 .pagination > .active > span,
 .pagination > .active > span:focus,
 .pagination > .active > span:hover {
-	background-color: #009efb;
-	border-color: #009efb;
+	background-color: #96ab5c;
+	border-color: #96ab5c;
 }
 .pagination > li > a,
 .pagination > li > span {
-	color: #009efb;
+	color: #96ab5c;
 	padding: .5rem .75rem !important;
 }
 .page-item.active .page-link {
-	background-color: #009efb;
-	border-color: #009efb;
+	background-color: #96ab5c;
+	border-color: #96ab5c;
 }
 .dropdown-menu {
 	border: 1px solid rgba(0, 0, 0, 0.1);
@@ -796,7 +796,7 @@ textarea.form-control {
 	min-width: 136px;
 }
 .user-menu .bg-primary {
-	background-color: #009efb !important;
+	background-color: #96ab5c !important;
 }
 .status {
 	background-color: #ccc;
@@ -871,7 +871,7 @@ textarea.form-control {
 	line-height: 40px;
 }
 .sidebar-menu li.menu-title a {
-	color: #009efb;
+	color: #96ab5c;
 	display: inline-block;
 	float: right;
 	padding: 0;
@@ -885,7 +885,7 @@ textarea.form-control {
 	margin-bottom: 15px;
 }
 .sidebar-menu ul ul a.active {
-	color: #009efb;
+	color: #96ab5c;
 	text-decoration: underline;
 }
 .mobile-user-menu {
@@ -914,7 +914,7 @@ textarea.form-control {
 }
 .profile-rightbar {
 	display: none !important;
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 26px;
 	margin-left: 15px;
 }
@@ -1087,7 +1087,7 @@ textarea.form-control {
 	font-size: 14px;
 }
 .account-box a:hover {
-	color: #009efb;
+	color: #96ab5c;
 }
 .account-box .form-control {
 	border: 1px solid #eaeaea;
@@ -1136,7 +1136,7 @@ textarea.form-control {
 	font-size: 50px;
 	text-align: center;
 	line-height: 65px;
-	background: #009efb;
+	background: #96ab5c;
 	border-radius: 50%;
 	font-size: 40px;
 	height: 65px;
@@ -1197,7 +1197,7 @@ textarea.form-control {
 	color: #333;
 }
 .chart-title span {
-	color: #009efb;
+	color: #96ab5c;
 }
 .card-title > a.btn {
 	color: #fff;
@@ -1207,7 +1207,7 @@ ul.chat-user-total li {
 	color: #999;
 }
 ul.chat-user-total li i.current-users {
-	color: #009efb;
+	color: #96ab5c;
 	padding-right: 5px;
 }
 ul.chat-user-total li i.old-users {
@@ -1255,7 +1255,7 @@ ul.chat-user-total li i.old-users {
 }
 
 .btn-primary-two {
-	border: 1px solid #009efb;
+	border: 1px solid #96ab5c;
 	border-radius: 25px;
 	width: 100px;
 	background: transparent;
@@ -1352,7 +1352,7 @@ ul.chat-user-total li i.old-users {
 	top: 0;
 	left: 0;
 	height: 100%;
-	background-color: #009efb;
+	background-color: #96ab5c;
 	z-index: 10;
 }
 .bar-chart > .chart > .item > .bar > .item-progress > .title {
@@ -1402,7 +1402,7 @@ ul.chat-user-total li i.old-users {
 	margin-left: 5px;
 }
 .dash-widget-info > span.widget-title1 {
-	background: #009efb;
+	background: #96ab5c;
 	color: #fff;
 	padding: 5px 10px;
 	border-radius: 4px;
@@ -1536,7 +1536,7 @@ ul.chat-user-total li i.old-users {
 	line-height: 1.35;
 }
 .activity .timeline-content > a {
-	color: #009efb;
+	color: #96ab5c;
 }
 .activity-delete {
 	background-color: #ffe5e6;
@@ -1600,7 +1600,7 @@ ul.chat-user-total li i.old-users {
 	line-height: 38px;
 }
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-	background-color: #009efb;
+	background-color: #96ab5c;
 }
 .select2-container--default.select2-container--focus .select2-selection--multiple {
 	border: 1px solid #eaeaea;
@@ -1641,8 +1641,8 @@ ul.chat-user-total li i.old-users {
 .nav-tabs.nav-tabs-solid > li > a.active,
 .nav-tabs.nav-tabs-solid > li > a.active:hover,
 .nav-tabs.nav-tabs-solid > li > a.active:focus {
-	background-color: #009efb;
-	border-color: #009efb;
+	background-color: #96ab5c;
+	border-color: #96ab5c;
 	color: #fff;
 }
 .nav-tabs.nav-tabs-solid.nav-tabs-rounded {
@@ -1784,7 +1784,7 @@ ul.chat-user-total li i.old-users {
 	text-transform: uppercase;
 }
 .typing-text {
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 12px;
 	text-transform: lowercase;
 }
@@ -1794,7 +1794,7 @@ ul.chat-user-total li i.old-users {
 	font-size: 12px;
 }
 .custom-menu.nav > li > a {
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 26px;
 	margin-left: 15px;
 	padding: 0;
@@ -2180,7 +2180,7 @@ ul.chat-user-total li i.old-users {
 	font-size: 12px;
 }
 .file-author a {
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 12px;
 	text-decoration: underline;
 }
@@ -2660,7 +2660,7 @@ a.fc-event:not([href]) {
 .fc-state-down,
 .fc-state-active,
 .fc-state-disabled {
-	background-color: #009efb;
+	background-color: #96ab5c;
 	color: #fff;
 	text-shadow: none;
 }
@@ -2721,7 +2721,7 @@ a.fc-event:not([href]) {
 	padding: 0;
 }
 .personal-info .text > a {
-	color: #009efb;
+	color: #96ab5c;
 }
 .profile-view .profile-img-wrap {
 	height: 150px;
@@ -2942,11 +2942,11 @@ a.fc-event:not([href]) {
 	position: relative;
 }
 .roles-menu > ul > li.active > a {
-	border-color: #009efb;
-	color: #009efb;
+	border-color: #96ab5c;
+	color: #96ab5c;
 }
 .roles-menu > ul > li > a:hover {
-	border-color: #009efb;
+	border-color: #96ab5c;
 	background-color: #eee;
 }
 .material-switch > input[type="checkbox"] {
@@ -3394,7 +3394,7 @@ a.status-grey {
 	padding: 10px;
 }
 .mail-list > li.active > a {
-	color: #009efb;
+	color: #96ab5c;
 	font-weight: bold;
 }
 .unread .name,
@@ -3601,7 +3601,7 @@ table.table-inbox tbody tr.checked {
 	margin-bottom: 20px;
 }
 .read-more:hover {
-	color: #009efb;
+	color: #96ab5c;
 	margin-left: 10px;
 	-moz-transition: all 0.2s linear 0s;
 	-ms-transition: all 0.2s linear 0s;
@@ -3610,7 +3610,7 @@ table.table-inbox tbody tr.checked {
 	transition: all 0.2s linear 0s;
 }
 .read-more i {
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 18px;
 	margin-right: 3px;
 }
@@ -3629,11 +3629,11 @@ table.table-inbox tbody tr.checked {
 	margin-right: 0;
 }
 .blog-info a:hover {
-	color: #009efb;
+	color: #96ab5c;
 	;
 }
 .blog-info i {
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 18px;
 	margin-right: 5px;
 }
@@ -3695,7 +3695,7 @@ table.table-inbox tbody tr.checked {
 	background-color: transparent;
 	border-color: #eaeaea;
 	border-left: none;
-	color: #009efb;
+	color: #96ab5c;
 	height: 40px;
 	border-radius: 0;
 }
@@ -3757,7 +3757,7 @@ table.table-inbox tbody tr.checked {
 	margin: 0;
 }
 .post-info p i {
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 16px;
 	margin-right: 4px;
 }
@@ -3779,7 +3779,7 @@ table.table-inbox tbody tr.checked {
 	font-size: 14px;
 }
 .categories li a:hover {
-	color: #009efb;
+	color: #96ab5c;
 	margin-left: 10px;
 	-moz-transition: all 0.2s linear 0s;
 	-ms-transition: all 0.2s linear 0s;
@@ -3788,7 +3788,7 @@ table.table-inbox tbody tr.checked {
 	transition: all 0.2s linear 0s;
 }
 .categories > li > a > i {
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 18px;
 	margin-right: 10px;
 }
@@ -3841,11 +3841,11 @@ table.table-inbox tbody tr.checked {
 	top: 0;
 }
 .tag:hover {
-	background-color: #009efb;
+	background-color: #96ab5c;
 	color: #fff;
 }
 .tag:hover:after {
-	border-left-color: #009efb;
+	border-left-color: #96ab5c;
 }
 .comment-by {
 	display: block;
@@ -3941,7 +3941,7 @@ blockquote p {
 }
 .social-share > li > a {
 	border: 1px solid #dfdfdf;
-	color: #009efb;
+	color: #96ab5c;
 	display: inline-block;
 	font-size: 22px;
 	height: 40px;
@@ -3949,9 +3949,9 @@ blockquote p {
 	width: 40px;
 }
 .social-share > li > a:hover {
-	background-color: #009efb;
+	background-color: #96ab5c;
 	color: #fff;
-	border-color: #009efb;
+	border-color: #96ab5c;
 }
 .widget h3 {
 	color: #656565;
@@ -3959,7 +3959,7 @@ blockquote p {
 	margin: 0 0 20px;
 }
 .blog-reply > a {
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 12px;
 	font-weight: 500;
 }
@@ -3989,7 +3989,7 @@ blockquote p {
 	border-radius: 58px;
 }
 .blog-author-name {
-	color: #009efb;
+	color: #96ab5c;
 	font-size: 18px;
 }
 .text-red {
@@ -4014,8 +4014,8 @@ blockquote p {
 	margin-bottom: 20px;
 }
 .comment-submit .btn {
-	background-color: #009efb;
-	border-color: #009efb;
+	background-color: #96ab5c;
+	border-color: #96ab5c;
 	border-radius: 0;
 	font-size: 18px;
 	padding: 8px 26px;
@@ -4484,7 +4484,7 @@ blockquote p {
 	.nav-tabs.nav-tabs-top > li > a.active,
 	.nav-tabs.nav-tabs-top > li > a.active:hover,
 	.nav-tabs.nav-tabs-top > li > a.active:focus {
-		border-top-color: #009efb;
+		border-top-color: #96ab5c;
 	}
 	.nav-tabs.nav-tabs-bottom > li {
 		margin-bottom: -1px;
@@ -4494,7 +4494,7 @@ blockquote p {
 	.nav-tabs.nav-tabs-bottom > li > a.active:focus {
 		border-bottom-width: 2px;
 		border-color: transparent;
-		border-bottom-color: #009efb;
+		border-bottom-color: #96ab5c;
 		background-color: transparent;
 		transition: none 0s ease 0s;
 		-moz-transition: none 0s ease 0s;
@@ -4510,7 +4510,7 @@ blockquote p {
 	.nav-tabs.nav-tabs-bottom > li > a.active:focus {
 		border-bottom-width: 2px;
 		border-color: transparent;
-		border-bottom-color: #009efb;
+		border-bottom-color: #96ab5c;
 		background-color: transparent;
 		transition: none 0s ease 0s;
 		-moz-transition: none 0s ease 0s;
@@ -4696,7 +4696,7 @@ blockquote p {
 	.nav-tabs.nav-justified > li > a.active,
 	.nav-tabs.nav-justified > li > a.active:hover,
 	.nav-tabs.nav-justified > li > a.active:focus {
-		border-color: transparent transparent transparent #009efb;
+		border-color: transparent transparent transparent #96ab5c;
 		border-left-width: 2px;
 	}
 	.nav-tabs {
@@ -4727,7 +4727,7 @@ blockquote p {
 	.nav-tabs > li > a.active:hover,
 	.nav-tabs > li > a.active:focus {
 		background-color: #f5f5f5;
-		border-color: transparent transparent transparent #009efb;
+		border-color: transparent transparent transparent #96ab5c;
 		border-left-width: 2px;
 	}
 	.nav-tabs > li.open:not(.active) > a,
@@ -4751,7 +4751,7 @@ blockquote p {
 	.nav-tabs-justified > li > a.active:hover,
 	.nav-tabs-justified > li > a.active:focus {
 		border-width: 0 0 0 2px;
-		border-left-color: #009efb;
+		border-left-color: #96ab5c;
 	}
 	h1 {
 		font-size: 2em;
