--- a/src/app/layout/resultat-test/resultat-test.component.html
+++ b/src/app/layout/resultat-test/resultat-test.component.html
@@ -43,6 +43,9 @@
     <div class="row">
       <div class="col-md-12">
         <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
+          <ngx-spinner [fullScreen]="false" type="pacman" color="#96ab5c" size="medium">
+            <p class="loading" style="font-size: 20px; color: #96ab5c; margin-top: 30px;" translate>Please wait</p>
+          </ngx-spinner>
           <h4 class="card-title">Informations du test</h4>
           <form [formGroup]="form" (ngSubmit)="saveTest()">
             <div class="form-group row">
@@ -95,15 +98,15 @@
                 <textarea rows="3" cols="5" class="form-control rounded" formControlName="testCommentaire" value="true"></textarea>
               </div>
             </div>
-            <!--<div class="text-left">
+            <div class="text-left">
               <div class="col-md-10">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" name="checkbox" class="rounded"> Check me out
+                    <input type="checkbox" name="checkbox" class="rounded"> Vérifier
                   </label>
                 </div>
               </div>
-            </div>-->
+            </div>
             <div class="text-right">
               <button type="submit" class="btn btn-primary-one">Envoyer</button>
             </div>
