--- a/src/app/layout/util-component/header/header.component.html
+++ b/src/app/layout/util-component/header/header.component.html
@@ -94,6 +94,7 @@
       <div class="dropdown-menu">
         <a class="dropdown-item" href="#" (click)="switchLang('en', $event)" translate><i class="flag-icon flag-icon-us"></i> English</a>
         <a class="dropdown-item" href="#" (click)="switchLang('fr', $event)" translate><i class="flag-icon flag-icon-fr"></i> French</a>
+        <a class="dropdown-item" href="#" (click)="switchLang('es', $event)" translate><i class="flag-icon flag-icon-es"></i> Spanish</a>
       </div>
     </li>
     <li class="nav-item dropdown has-arrow">
@@ -105,7 +106,7 @@
         &nbsp;<span>{{userConnected.username}}</span>
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#" (click)="switchLang('fr', $event)" translate>My Profile</a>
+        <a class="dropdown-item" href="#" translate>My Profile</a>
         <a class="dropdown-item" href="#" (click)="logout($event)" translate>Logout</a>
       </div>
     </li>
