--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
-<!--<div class="main-wrapper account-wrapper">
+<div class="main-wrapper account-wrapper">
   <div class="account-page">
     <div class="account-center">
       <div class="account-box">
-        <ngx-spinner [fullScreen]="false" type="ball-clip-rotate-multiple" color="white" size="medium">
-          <p class="loading" style="font-size: 20px; color: white">Veuillez patienter</p>
+        <ngx-spinner [fullScreen]="false" type="pacman" color="#96ab5c" size="medium">
+          <p class="loading" style="font-size: 20px; color: #96ab5c; margin-top: 30px;" translate>Please wait</p>
         </ngx-spinner>
         <form [formGroup]="loginForm" #formLogin="ngForm" (ngSubmit)="onLogin()" class="form-signin">
           <div class="account-logo">
-            <a href="#"><img src="assets/img/logo-dark.png" alt=""></a>
+            <a href="#"><img src="assets/img/logo_meduim.jpeg" alt="Awaycovid"></a>
           </div>
           <span *ngIf="message != ''" style="color: red; font-weight: bold">{{message}}</span>&nbsp;
           <div class="form-group">
@@ -19,27 +19,33 @@
           </div>
           <div class="form-group">
             <label>Mot de passe</label>
-            <input type="password" class="form-control" formControlName='password'>
+            <input type="password" class="form-control" #pwd formControlName='password'>
+            <span class="p-viewer">
+              <i class="fa fa-eye" aria-hidden="true" (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'password'"></i>
+            </span>
+            <span class="p-viewer">
+              <i class="fa fa-eye-slash" aria-hidden="true" (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'text'"></i>
+            </span>
             <div *ngIf="f.password.invalid && f.password.touched" class="text-danger">
               &nbsp;<small *ngIf="f.password.errors.required">Le mot de passe est requis.</small>
             </div>
           </div>
           <div class="form-group text-right">
-            <a href="forgot-password.html">Forgot your password?</a>
+            <a href="forgot-password.html">Mot de passe oublié?</a>
           </div>
           <div class="form-group text-center">
-            <button type="submit" class="btn btn-primary account-btn" [disabled]="loginForm.invalid">Login</button>
+            <button type="submit" class="btn btn-primary account-btn" [disabled]="loginForm.invalid">Se connecter</button>
           </div>
           <div class="text-center register-link">
-            Don’t have an account? <a href="register.html">Register Now</a>
+            Vous n'avez pas de compte? <a href="register.html">s'enregistrer</a>
           </div>
         </form>
       </div>
     </div>
   </div>
-</div>-->
+</div>
 
-<div class="container">
+<!--<div class="container">
   <div class="forms-container">
     <span *ngIf="messageSessionExpire != ''" style="color: red; font-weight: bold">{{messageSessionExpire}}</span>
     <div class="signin-signup">
@@ -81,7 +87,7 @@
           </a>
         </div>
       </form>
-     <!-- <form [formGroup]="registerForm" (ngSubmit)="register()" class="sign-up-form">
+     &lt;!&ndash; <form [formGroup]="registerForm" (ngSubmit)="register()" class="sign-up-form">
         <h2 class="title">Sign up</h2>
         <div class="input-field">
           <i class="fas fa-user"></i>
@@ -178,7 +184,7 @@
             <i class="fab fa-linkedin-in"></i>
           </a>
         </div>&ndash;&gt;
-      </form>-->
+      </form>&ndash;&gt;
     </div>
   </div>
 
@@ -190,7 +196,7 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, ex ratione. Aliquid!
         </p>
          <button class="btn transparent" id="sign-up-btn">
-          <!--Sign up-->
+          &lt;!&ndash;Sign up&ndash;&gt;
         </button>
       </div>
       <img src="../../assets/img/sign.svg" class="image" alt="" />
@@ -208,4 +214,4 @@
       <img src="../../assets/img/register.svg" class="image" alt="" />
     </div>
   </div>
-</div>
+</div>-->
