--- a/src/app/layout/preleveur/preleveur.component.html
+++ b/src/app/layout/preleveur/preleveur.component.html
@@ -102,7 +102,7 @@
               </div>
             </div>
             <div class="text-right" style="margin-top: 25px;">
-              <button type="submit" class="btn btn-secondary-one" (click)="resetForm()">Annuler</button>&nbsp;&nbsp;
+              <button type="submit" class="btn btn-secondary-one">Annuler</button>&nbsp;&nbsp;
               <button type="submit" class="btn btn-primary-one" (click)="save()">Enregistrer</button>
             </div>
           </div>
