--- a/src/app/layout/util-component/sidebar/sidebar.component.html
+++ b/src/app/layout/util-component/sidebar/sidebar.component.html
@@ -12,43 +12,43 @@
         <li>
           <a routerLink="/patients"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
         </li>-->
-        <li *ngIf="user.laboratoire != null">
+        <li *ngIf="user.role == 'LABORANTIN'">
           <a routerLink="/appointments"><i class="fa fa-calendar"></i> <span translate>Appointment</span></a>
         </li>
-        <li *ngIf="user.patient != null">
+        <li *ngIf="user.role == 'PATIENT'">
           <a routerLink="/prendre-rendez-vous"><i class="fa fa-calendar"></i> <span translate>Make an appointment</span></a>
         </li>
-        <li *ngIf="user.patient != null">
+        <li *ngIf="user.role == 'PATIENT'">
           <a routerLink="/mes-resultat"><i class="fa fa-calendar"></i> <span translate>My results</span></a>
         </li>
-        <li *ngIf="user.laboratoire != null">
-          <a routerLink="/resultat-test"><i class="fa fa-calendar"></i> <span translate>Test result</span></a>
+        <li *ngIf="user.role == 'LABORANTIN'">
+          <a routerLink="/resultat-test"><i class="fa fa-calendar"></i> <span translate>Covid19 test result</span></a>
         </li>
-        <li *ngIf="user.laboratoire != null">
+        <li *ngIf="user.role == 'LABORANTIN'">
           <a routerLink="/resultat-vaccin">
             <i class="fa fa-calendar"></i>
-            <span translate>Vaccine result</span>
+            <span translate>Vaccination</span>
           </a>
         </li>
-        <li *ngIf="user.laboratoire != null">
+        <li *ngIf="user.role == 'LABORANTIN'">
           <a routerLink="/valider-test">
             <i class="fa fa-calendar"></i>
-            <span translate>validate a test</span>
+            <span translate>Covid19 Test Sample</span>
           </a>
         </li>
-        <li *ngIf="user.laboratoire != null">
+        <li *ngIf="user.role == 'ADMIN'">
           <a routerLink="/preleveur">
             <i class="fa fa-calendar"></i>
-            <span translate>Préleveur</span>
+            <span translate>Sampler</span>
           </a>
         </li>
-        <li *ngIf="user.laboratoire != null">
+        <li *ngIf="user.role == 'ADMIN'">
           <a routerLink="/controleur">
             <i class="fa fa-calendar"></i>
-            <span translate>Contrôleur</span>
+            <span translate>Controller</span>
           </a>
         </li>
-        <li *ngIf="((user.patient == null) && (user.laboratoire == null))">
+        <li *ngIf="user.role == 'ADMIN'">
           <a routerLink="/laboratoires"><i class="fa fa-calendar"></i> <span translate>Register a laboratory</span></a>
         </li>
         <!--<li>
