--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
               &nbsp;<small *ngIf="f.username.errors.required">Le nom d'utilisateur est requis.</small>
             </div>
           </div>
-          <div class="form-group">
+         <!-- <div class="form-group">
             <label>Mot de passe</label>
             <input type="password" class="form-control" #pwd formControlName='password'>
             <span class="p-viewer">
@@ -29,6 +29,16 @@
             <div *ngIf="f.password.invalid && f.password.touched" class="text-danger">
               &nbsp;<small *ngIf="f.password.errors.required">Le mot de passe est requis.</small>
             </div>
+          </div>-->
+          <div class="form-group">
+            <label class="col-form-label">Mot de passe</label>
+              <div class="input-group mb-3">
+                <input type="password" class="form-control" #pwd formControlName='password'>
+                <div class="input-group-append">
+                  <span class="input-group-text fa fa-eye"  (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'password'"></span>
+                  <span class="input-group-text fa fa-eye-slash" (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'text'"></span>
+                </div>
+              </div>
           </div>
           <div class="form-group text-right">
             <a href="forgot-password.html">Mot de passe oublié?</a>
@@ -36,9 +46,9 @@
           <div class="form-group text-center">
             <button type="submit" class="btn btn-primary account-btn" [disabled]="loginForm.invalid">Se connecter</button>
           </div>
-          <div class="text-center register-link">
+          <!--<div class="text-center register-link">
             Vous n'avez pas de compte? <a href="register.html">s'enregistrer</a>
-          </div>
+          </div>-->
         </form>
       </div>
     </div>
