--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -46,9 +46,9 @@
           <div class="form-group text-center">
             <button type="submit" class="btn btn-primary account-btn" [disabled]="loginForm.invalid">Se connecter</button>
           </div>
-          <!--<div class="text-center register-link">
-            Vous n'avez pas de compte? <a href="register.html">s'enregistrer</a>
-          </div>-->
+          <div class="text-center register-link">
+            Vous n'avez pas de compte? <a routerLink="/inscription">s'enregistrer</a>
+          </div>
         </form>
       </div>
     </div>
