--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,37 +4,212 @@
       <div class="account-box">
         <form action="http://dreamguys.co.in/preclinic/template/index.html" class="form-signin">
           <div class="account-logo">
-            <a href="index-2.html"><img src="assets/img/logo-dark.png" alt=""></a>
+            <a href="#"><img src="assets/img/logo_meduim.jpeg" alt="Awaycovid"></a>
           </div>
-          <div class="form-group">
-            <label>Username</label>
-            <input type="text" class="form-control">
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Nom et prénom</label>
+              <input type="text" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
           </div>
-          <div class="form-group">
-            <label>Email Address</label>
-            <input type="email" class="form-control">
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Date de naissance</label>
+              <input type="text" class="form-control floating" value="" style="margin-top: 10px;" onfocus="(this.type='date')">
+            </div>
           </div>
-          <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control">
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Sexe</label>
+              <input type="text" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
           </div>
-          <div class="form-group">
-            <label>Mobile Number</label>
-            <input type="text" class="form-control">
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Nom d'utilisateur</label>
+              <input type="text" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
           </div>
-          <div class="form-group checkbox">
-            <label>
-              <input type="checkbox"> I have read and agree the Terms & Conditions
-            </label>
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Email</label>
+              <input type="email" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Mot de passe</label>
+              <!--<input type="text" class="form-control floating" value="" style="margin-top: 10px;">-->
+              <div class="input-group mb-3">
+                <input type="password" class="form-control floating" #pwd style="margin-top: 10px;">
+                <div class="input-group-append" style="margin-top: 10px; height: 50px;">
+                  <span class="input-group-text fa fa-eye"  (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'password'"></span>
+                  <span class="input-group-text fa fa-eye-slash" (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'text'"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group form-focus select-focus">
+              <label class="focus-label">Pays</label>
+              <select class="form-control floating">
+                <option value="male selected">Male</option>
+                <option value="female1">Female</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group form-focus select-focus">
+              <label class="focus-label">Ville</label>
+              <select class="form-control floating">
+                <option value="male selected">Male</option>
+                <option value="female1">Female</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Téléphone</label>
+              <input type="text" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Numéro de passeport</label>
+              <input type="text" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Date expiration</label>
+              <input type="text" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Type de passeport</label>
+              <input type="text" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Photo du passeport</label>
+              <input type="file" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group form-focus">
+              <label class="focus-label">Photo de profil</label>
+              <input type="file" class="form-control floating" value="" style="margin-top: 10px;">
+            </div>
           </div>
           <div class="form-group text-center">
             <button class="btn btn-primary account-btn" type="submit">Signup</button>
           </div>
           <div class="text-center login-link">
-            Already have an account? <a href="login.html">Login</a>
+            Already have an account? <a routerLink="/login">Login</a>
           </div>
         </form>
       </div>
     </div>
   </div>
 </div>
+
+<!--<form [formGroup]="registerForm" (ngSubmit)="register()" class="sign-up-form">
+  <h2 class="title">Sign up</h2>
+  <div class="input-field">
+    <i class="fas fa-user"></i>
+    <input type="text" placeholder="Nom et prénom" formControlName="name"/>
+  </div>
+  <div class="input-field">
+    <i class="fas fa-calendar"></i>
+    <input type="text" class="date" placeholder="Date de naissance" formControlName="birthday" onfocus="(this.type='date')"/>
+  </div>
+  <div class="input-field">
+    <i class="fas fa-user"></i>
+    <input type="text" placeholder="Nom d'utilisateur" formControlName="username"/>
+  </div>
+  <div class="input-field">
+    <i class="fas fa-envelope"></i>
+    <input type="email" placeholder="Email" formControlName="email"/>
+  </div>
+  <div class="input-field">
+    &lt;!&ndash;<i class="fas fa-lock"></i>&ndash;&gt;
+    <i class="fas fa-eye" (click)="passwordVisibility(pwdR)" *ngIf="pwdR.type == 'password'"></i>
+    <i class="fas fa-eye-slash" (click)="passwordVisibility(pwdR)" *ngIf="pwdR.type == 'text'"></i>
+    <input type="password" #pwdR placeholder="Password" formControlName="password"/>
+  </div>
+  <div class="input-field">
+    <i class="fas fa-phone"></i>
+    <input type="text" placeholder="Téléphone" formControlName="phone"/>
+  </div>
+  <div class="input-field">
+    <i class="fas fa-location-arrow"></i>
+    <input type="text" placeholder="Sexe" formControlName="sexe"/>
+  </div>
+  &lt;!&ndash;<div class="input-field col-md-12">
+  &lt;!&ndash;<i class="fas fa-map-marker"></i>&ndash;&gt;
+  <select name="" formControlName="pays">
+    <option disabled>Pays</option>
+    <option value="">option 1</option>
+    <option value="">option 2</option>
+  </select>
+</div>&ndash;&gt;
+  <div class="input-field">
+    <i class="fas fa-map-marker"></i>
+    <input type="text" placeholder="Ville" formControlName="ville"/>
+  </div>
+  <div class="input-field">
+    <i class="fas fa-credit-card"></i>
+    <input type="text" placeholder="Numéro de passport" formControlName="numeroPassport"/>
+  </div>
+  <div class="input-field">
+    <i class="fas fa-calendar"></i>
+    <input type="text" placeholder="Date expiration" formControlName="dateExpiration" onfocus="(this.type='date')"/>
+  </div>
+  <div class="col-md-12">
+    &lt;!&ndash;<i class="fas fa-map-marker"></i>&ndash;&gt;
+    <select name="" id="" formControlName="typePassport">
+      <option value="" selected="selected" disabled>Type de passport</option>
+      <option [ngValue]="type.id" *ngFor="let type of passportType">{{type.label}}</option>
+    </select>
+  </div>
+  <div class="">
+    &lt;!&ndash; <i class="fas fa-camera"></i>&ndash;&gt;
+    <input type="file" placeholder="Photo du passport" (change)="onFileChanged($event)" formControlName="imagePassport"/>
+  </div>
+  <a class="chat-img-attach" >
+    &lt;!&ndash; <img width="182" height="137" alt="image du passport" src="assets/img/doctor-03.jpg" *ngIf="urlPassportImage == null">&ndash;&gt;
+    <img width="182" height="137" alt="image du passport" [src]="urlPassportImage"  *ngIf="urlPassportImage != null">
+    &lt;!&ndash;<div class="chat-placeholder">
+    <div class="chat-img-name">image du passeport</div>
+    &lt;!&ndash;<div class="chat-file-desc">842 KB</div>&ndash;&gt;
+  </div>&ndash;&gt;
+  </a>
+  <div class="">
+    &lt;!&ndash;<i class="fas fa-camera"></i>&ndash;&gt;
+    <input type="file" placeholder="Photo de profil"  formControlName="imageSelfie" (change)="uploadImageProfil($event)"/>
+  </div>
+  <div class="account-logo">
+    <a href="#">
+      &lt;!&ndash; <img alt="Photo de profil" src="assets/img/user.jpg" class="img-fluid rounded-circle" *ngIf="urlProfilImage == null">&ndash;&gt;
+      <img alt="Photo de profil" [src]="urlProfilImage" class="img-fluid rounded-circle" *ngIf="urlProfilImage != null">
+    </a>
+  </div>
+  <input type="submit" class="btn" value="Sign up" />
+  &lt;!&ndash;<p class="social-text">Or Sign up with social platforms</p>
+  <div class="social-media">
+    <a href="#" class="social-icon">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="#" class="social-icon">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a href="#" class="social-icon">
+      <i class="fab fa-google"></i>
+    </a>
+    <a href="#" class="social-icon">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
+  </div>&ndash;&gt;
+</form>&ndash;&gt;-->
