--- a/src/app/layout/controleur/controleur.component.html
+++ b/src/app/layout/controleur/controleur.component.html
@@ -18,6 +18,9 @@
         <div class="card-box">
           <h4 class="card-title">Enregistrer un Contrôleur</h4><br>
           <div class="form">
+            <ngx-spinner [fullScreen]="false" type="pacman" color="#96ab5c" size="medium">
+              <p class="loading" style="font-size: 20px; color: #96ab5c; margin-top: 30px;" translate>Please wait</p>
+            </ngx-spinner>
             <div>
               <div class="row">
                 <div class="col-md-12">
@@ -30,82 +33,82 @@
                     </div>
                   </div>
                   <div class="profile-basic">
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Nom complet</label>
-                          <input type="text" class="form-control floating" value="">
+                    <form [formGroup]="form" (ngSubmit)="save()">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Nom complet</label>
+                            <input type="text" class="form-control floating" value="" formControlName="name">
+                          </div>
                         </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Date de naissance</label>
-                          <div class="cal-icon">
-                            <input type="text" class="form-control floating datetimepicker" value="">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Date de naissance</label>
+                              <input type="text" class="form-control floating" value="" formControlName="birthday" onfocus="(this.type='date')">
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Sexe</label>
-                          <select class="select form-control floating">
-                            <option value="Masculin">Masculin</option>
-                            <option value="Feminin">Féminin</option>
-                          </select>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Sexe</label>
+                            <select class="form-control floating" formControlName="sexe">
+                              <option value="Masculin">Masculin</option>
+                              <option value="Feminin">Féminin</option>
+                            </select>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Télephone</label>
+                            <input type="text" class="form-control floating" value="" formControlName="phone">
+                          </div>
                         </div>
                       </div>
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Télephone</label>
-                          <input type="text" class="form-control floating" value="">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Adresse email</label>
+                            <input type="text" class="form-control floating" value="" formControlName="email">
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <div class="form-group form-focus select-focus">
+                            <label class="focus-label">Type de contrôleur</label>
+                            <select class="form-control floating" formControlName="typeControleur">
+                              <option value="Aeroport">Aéroport</option>
+                              <option value="Frontiere">Frontière</option>
+                            </select>
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Adresse email</label>
-                          <input type="text" class="form-control floating" value="">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Nom d'utilisateur</label>
+                            <input type="text" class="form-control floating" value="" formControlName="username">
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Mot de passe</label>
+                            <input type="password" class="form-control floating" value="" style="position: relative;" formControlName="password">
+                            <!--<span class="p-viewer">
+                              <i class="fa fa-eye" aria-hidden="true"></i>
+                            </span>-->
+                          </div>
                         </div>
                       </div>
-                      <div class="col-md-6">
-                        <div class="form-group form-focus select-focus">
-                          <label class="focus-label">Type de contrôleur</label>
-                          <select class="select form-control floating">
-                            <option value="Aeroport">Aéroport</option>
-                            <option value="Frontiere">Frontière</option>
-                          </select>
-                        </div>
+                      <div class="text-right" style="margin-top: 25px;">
+                        <button type="submit" class="btn btn-secondary-one">Annuler</button>&nbsp;&nbsp;
+                        <button type="submit" class="btn btn-primary-one">Enregistrer</button>
                       </div>
-
-                    </div>
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Nom d'utilisateur</label>
-                          <input type="text" class="form-control floating" value="">
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Mot de passe</label>
-                          <input type="password" class="form-control floating" value="" style="position: relative;">
-                          <!--<span class="p-viewer">
-                            <i class="fa fa-eye" aria-hidden="true"></i>
-                          </span>-->
-                        </div>
-                      </div>
-                    </div>
+                    </form>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="text-right" style="margin-top: 25px;">
-              <button type="submit" class="btn btn-secondary-one">Annuler</button>&nbsp;&nbsp;
-              <button type="submit" class="btn btn-primary-one" (click)="save()">Enregistrer</button>
-            </div>
+
           </div>
         </div>
       </div>
@@ -115,7 +118,7 @@
       <div class="col-lg-12">
         <div class="card-box">
           <div class="card-block">
-            <h4 class="card-title">Liste des préleveurs</h4>
+            <h4 class="card-title">Liste des contrôleurs</h4>
             <div class="table-responsive">
               <table class="table table-hover mb-0">
                 <thead class="bg-thead">
