--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 
 <div class="page-wrapper">
   <div class="content">
-    <div class="row">
+    <div class="row"  *ngIf="user.role == 'ADMIN'">
       <div class="col-md-6 col-sm-6 col-lg-6 col-xl-4">
         <div class="dash-widget">
           <span class="dash-widget-bg1"><i class="fa fa-user-o" aria-hidden="true"></i></span>
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row"  *ngIf="user.role == 'ADMIN'">
       <div class="col-12 col-md-6 col-lg-6 col-xl-6">
         <div class="card">
           <div class="card-body">
@@ -59,6 +59,6 @@
         </div>
       </div>
     </div>
-    <div id="chartContainer" style="width: 100%; height: 350px;"></div>
+    <div id="chartContainer" style="width: 100%; height: 350px;" *ngIf="user.role == 'ADMIN'"></div>
   </div>
 </div>
