--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,7 +2,11 @@
   <div class="account-page">
     <div class="account-center">
       <div class="account-box">
+
         <form [formGroup]="registerForm" (ngSubmit)="register()" class="form-signin">
+          <ngx-spinner [fullScreen]="false" type="pacman" color="#96ab5c" size="medium">
+            <p class="loading" style="font-size: 20px; color: #96ab5c; margin-top: 30px;" translate>Please wait</p>
+          </ngx-spinner>
           <div class="account-logo">
             <a href="#"><img src="assets/img/logo_meduim.jpeg" alt="Awaycovid"></a>
           </div>
@@ -69,14 +73,14 @@
               </select>
             </div>
           </div>
-          <div class="col-md-12 row">
+          <div class="col-md-12 row" style="width: 100%;">
             <div class="form-group form-focus col-md-3">
               <label class="focus-label"></label>
               <input type="text" class="form-control " value="{{dialCode}}" readonly style="margin-top: 10px; border-top: none;border-left: none;border-right:none; background-color: white">
             </div>
             <div class="form-group form-focus col-md-9">
               <label class="focus-label" style="margin-left: 10px;">Téléphone</label>
-              <input type="text" class="form-control floating" value="" formControlName="phone" style="margin-top: 10px; margin-right: 0px;padding-right: 0px;">
+              <input type="text" class="form-control floating" value="" formControlName="phone" style="margin-top: 10px;">
             </div>
           </div>
           <div class="col-md-12">
